<resources>
    <string name="accept">Accept</string>
    <string name="access_code">Access Code</string>
    <string name="access_code_copy">If you have an access code, please enter it now to join the future of Fantasy Football!</string>
    <string name="account">Account</string>
    <string name="account_balance">Account Balance</string>
    <string name="add_money">Add Money</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="blitz_access_code">Blitz Access Code</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="continue_string">Continue</string>
    <string name="create">Create</string>
    <string name="create_or_join_a_league">Create or Join a League</string>
    <string name="create_league">Create League</string>
    <string name="create_league_description">What is your desired league name?</string>
    <string name="current_balance">Current Balance</string>
    <string name="deposit">Deposit</string>
    <string name="deposit_10">$10</string>
    <string name="deposit_25">$25</string>
    <string name="deposit_50">$50</string>
    <string name="deposit_100">$100</string>
    <string name="deposit_money">Deposit Money</string>
    <string name="deposit_text_1">To play Blitz for real money you need to add funds to your account.</string>
    <string name="deposit_text_2">Don\'t worry, you can withdraw your money at any time for free.</string>
    <string name="desired_username">Desired Username</string>
    <string name="earnings">earnings</string>
    <string name="enter_access_code">Enter Access Code</string>
    <string name="enter_league_name">Enter League name</string>
    <string name="email">Email</string>
    <string name="error">Error</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="game_log">Game Log</string>
    <string name="get_ready">Get Ready!</string>
    <string name="have_code">I have an Access Code</string>
    <string name="im_ready_let_me_in">I\'m ready, let me in!</string>
    <string name="information">Information</string>
    <string name="invite_a_friend">Invite a friend to play Blitz</string>
    <string name="join">Join!</string>
    <string name="join_a_league">Join a League</string>
    <string name="join_a_league_description">What is the name of the league you are joining?</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="leagues">Leagues</string>
    <string name="leagues_description">Join or create a BLITZ league and see how you stack up vs your league mates.  Compete against other leagues to become the best!</string>
    <string name="leagues_openly_recruiting">Leagues Openly Recruiting!</string>
    <string name="lets_get_going">Let\'s get going!</string>
    <string name="live_drafts_blocked">Live Drafts are closed every week from Sunday 12PM EST until Tuesday 12PM EST.  Please check back again on Tuesday 12PM EST.</string>
    <string name="loading_matchup_data">Loading Matchup Data</string>
    <string name="logout">Logout</string>
    <string name="loss">loss</string>
    <string name="losses">losses</string>
    <string name="match_found">Match Found! Join the match!</string>
    <string name="members">Members</string>
    <string name="music_and_sounds">Music &amp; Sounds</string>
    <string name="my_account">My Account</string>
    <string name="new_balance">New Balance</string>
    <string name="ok">OK</string>
    <string name="on_your_way">You\'re on your way to a whole new\nFantasy Football Experience!</string>
    <string name="open_recruiting">Open Recruiting</string>
    <string name="open_recruiting_description">Advertise my league in open Recruiting Section.</string>
    <string name="password">Password</string>
    <string name="pipe">|</string>
    <string name="place_reserved">Your place in line has been reserved!</string>
    <string name="players_ahead_of_you">0 players\nahead of you!</string>
    <string name="players_behind_you">Players behind you</string>
    <string name="players_in_front">Players in front of you</string>
    <string name="play">Play</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="rank">Rank</string>
    <string name="rating">Rating</string>
    <string name="reset">Reset</string>
    <string name="rules">Rules</string>
    <string name="round_complete">Round\nComplete</string>
    <string name="send">Send</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="terms_of_use_combined">Terms of Use / Privacy Policy</string>
    <string name="top_players">Top 150 Players</string>
    <string name="transactions">Transactions</string>
    <string name="transaction_history">Transaction History</string>
    <string name="unlock_more_helmets">Unlock More Helmets</string>
    <string name="username_or_email">Username or Email</string>
    <string name="waiting_for_opponent">Waiting for\nopponent</string>
    <string name="widthdraw_money">Withdraw Money</string>
    <string name="vs">vs</string>
    <string name="wins">wins</string>
    <string name="you_have_cash">You have $0.00</string>
    <string name="deposit_success_dialog_text">Thank You! The funds are now updated in your account. Happy drafting!</string>
    <string name="deposit_failure_dialog_text">Sorry, something went wrong with your deposit. Please check the information you entered and try again.</string>

    <string-array name="weeks_array">
        <item>Week 01</item>
        <item>Week 02</item>
        <item>Week 03</item>
        <item>Week 04</item>
        <item>Week 05</item>
        <item>Week 06</item>
        <item>Week 07</item>
        <item>Week 08</item>
        <item>Week 09</item>
        <item>Week 10</item>
        <item>Week 11</item>
        <item>Week 12</item>
        <item>Week 13</item>
        <item>Week 14</item>
        <item>Week 15</item>
        <item>Week 16</item>
        <item>Week 17</item>
    </string-array>
</resources>