<LinearLayout
    android:id="@+id/main_play_footer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:visibility="invisible"
    tools:context="${packageName}.${activityClass}"
    tools:ignore="ButtonStyle,UnusedAttribute">

    <com.blitz.app.utilities.textview.BlitzTextView
        android:id="@+id/main_play_cash_available"
        style="@style/App.TextView"
        fontPath="@string/app_font_helvetica_condensed_bold"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="left|center_vertical"
        android:text="@string/you_have_cash"
        android:textColor="@color/text_color_light"
        android:textSize="14sp"
        app:cacheText="true"
        app:clearInitialContent="true"/>

    <TextView
        android:id="@+id/main_play_add_money"
        style="@style/App.TextView"
        fontPath="@string/app_font_helvetica_condensed_bold"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/add_money"
        android:textColor="@color/selector_text_link"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/main_play_add_money_divider"
        style="@style/App.TextView"
        fontPath="@string/app_font_helvetica_condensed_bold"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/pipe"
        android:textColor="@color/text_color_light"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/main_play_rules"
        style="@style/App.TextView"
        fontPath="@string/app_font_helvetica_condensed_bold"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/rules"
        android:textColor="@color/selector_text_link"
        android:textSize="14sp"/>
</LinearLayout>