<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}"
    tools:ignore="ButtonStyle,UnusedAttribute,RelativeOverlap">

    <android.support.v4.view.ViewPager
        android:id="@+id/settings_carousel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/helmet_size"
        android:background="@color/background_inner_dark"
        android:gravity="center"
        android:overScrollMode="never"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@drawable/drawable_bg_inner_dark"/>

    <TextView
        android:id="@+id/settings_email"
        style="@style/App.SettingsItem.Dark"
        android:text="@string/lorum_ipsum_tiny"
        android:textColor="@color/text_color_light"/>

    <TextView
        style="@style/App.SettingsItem.Dark"
        android:text="@string/change_password"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/cash_balance"
        style="@style/App.SettingsItem.Dark"
        android:text="@string/account_balance"/>

    <TextView
        android:id="@+id/settings_deposit_money"
        style="@style/App.SettingsItem.Dark"
        android:text="@string/deposit_money"/>

    <TextView
        android:id="@+id/settings_withdraw_money"
        style="@style/App.SettingsItem.Dark"
        android:text="@string/widthdraw_money"/>

    <TextView
        android:id="@+id/settings_transaction_history"
        style="@style/App.SettingsItem"
        android:text="@string/transaction_history"/>

    <Switch
        android:id="@+id/settings_toggle_sound"
        style="@style/App.SettingsItem"
        android:text="@string/push_notifications"/>

    <Switch
        android:id="@+id/settings_toggle_music"
        style="@style/App.SettingsItem"
        android:text="@string/music_and_sounds"/>

    <LinearLayout
        style="@style/App.Button"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@color/background_inner"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:visibility="gone">

        <TextView
            style="@style/App.TextView"
            fontPath="@string/app_font_helvetica_condensed_bold"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/unlock_more_helmets"
            android:textAllCaps="true"
            android:textColor="@color/text_color_dark"
            android:textSize="16sp"/>

        <TextView
            style="@style/App.TextView"
            fontPath="@string/app_font_helvetica_condensed_bold"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/invite_a_friend"
            android:textColor="@color/active_blue"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/background_inner">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <Button
                    style="@style/App.Button"
                    fontPath="@string/app_font_helvetica_condensed_bold"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:gravity="center|left"
                    android:text="@string/blitz_access_code"
                    android:textAllCaps="true"
                    android:textColor="@color/text_color_dark"
                    android:textSize="12sp"/>

                <Button
                    style="@style/App.Button"
                    fontPath="@string/app_font_helvetica_condensed_bold"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:gravity="center|left"
                    android:text="@string/lorum_ipsum_word"
                    android:textSize="16sp"/>
            </LinearLayout>

            <Button
                style="@style/App.Button"
                fontPath="@string/app_font_helvetica_condensed_bold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:gravity="center|left"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/send"
                android:textColor="@color/active_blue"
                android:textSize="20sp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_inner_divider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/background_inner">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <Button
                    style="@style/App.Button"
                    fontPath="@string/app_font_helvetica_condensed_bold"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:gravity="center|left"
                    android:text="@string/blitz_access_code"
                    android:textAllCaps="true"
                    android:textColor="@color/text_color_dark"
                    android:textSize="12sp"/>

                <Button
                    style="@style/App.Button"
                    fontPath="@string/app_font_helvetica_condensed_bold"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:gravity="center|left"
                    android:text="@string/lorum_ipsum_word"
                    android:textSize="16sp"/>
            </LinearLayout>

            <Button
                style="@style/App.Button"
                fontPath="@string/app_font_helvetica_condensed_bold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:gravity="center|left"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/send"
                android:textColor="@color/active_blue"
                android:textSize="20sp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background_inner_divider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/background_inner">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <Button
                    style="@style/App.Button"
                    fontPath="@string/app_font_helvetica_condensed_bold"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:gravity="center|left"
                    android:text="@string/blitz_access_code"
                    android:textAllCaps="true"
                    android:textColor="@color/text_color_dark"
                    android:textSize="12sp"/>

                <Button
                    style="@style/App.Button"
                    fontPath="@string/app_font_helvetica_condensed_bold"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:gravity="center|left"
                    android:text="@string/lorum_ipsum_word"
                    android:textSize="16sp"/>
            </LinearLayout>

            <Button
                style="@style/App.Button"
                fontPath="@string/app_font_helvetica_condensed_bold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:gravity="center|left"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/send"
                android:textColor="@color/active_blue"
                android:textSize="20sp"/>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/settings_terms_of_use"
        style="@style/App.SettingsItem"
        android:text="@string/terms_of_use"/>

    <TextView
        android:id="@+id/settings_privacy_policy"
        style="@style/App.SettingsItem"
        android:text="@string/privacy_policy"/>

    <RelativeLayout
        android:id="@+id/settings_support"
        style="@style/App.SettingsItem">

        <TextView
            style="@style/App.TextView"
            fontPath="@string/app_font_helvetica_condensed_bold"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:text="@string/contact_us"
            android:textColor="@color/text_color_light_grey"
            android:textSize="16sp"/>

        <com.blitz.app.utilities.textview.BlitzTextView
            android:id="@+id/settings_version"
            style="@style/App.TextView"
            fontPath="@string/app_font_helvetica_condensed_bold"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="25dp"
            android:alpha=".75"
            android:gravity="center"
            android:text="@string/version"
            android:textColor="@color/text_color_light_grey"
            android:textSize="12sp"
            app:clearInitialContent="true"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/settings_sign_out"
        style="@style/App.SettingsItem"
        android:text="@string/logout"/>

    <TextView
        android:id="@+id/settings_reset"
        style="@style/App.SettingsItem"
        android:text="@string/reset"/>
</LinearLayout>