<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="195dp"
    android:background="@drawable/drawable_bg_inner_dark"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        style="@style/App.TextView"
        fontPath="@string/app_font_helvetica_condensed_bold"
        android:layout_width="@dimen/screen_width"
        android:layout_height="125dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.1"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/leagues_description"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="@dimen/screen_width"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/leagues_league_create"
            style="@style/App.Button"
            fontPath="@string/app_font_helvetica_condensed_bold"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_button_dark"
            android:paddingBottom="2dp"
            android:text="@string/create_league"
            android:textColor="@color/selector_text_link"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/leagues_league_join"
            style="@style/App.Button"
            fontPath="@string/app_font_helvetica_condensed_bold"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_button_dark"
            android:paddingBottom="2dp"
            android:text="@string/join_a_league"
            android:textColor="@color/selector_text_link"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>